--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
             <div id="header">
                 <div id='header-content'>
                     <img src="http://i.imgur.com/Va7LMi5.png"></img>
-                    <h1>Johny Duval - Martian</h1>
+                    <h1>Johny Duval</h1>
                 </div>
             </div>
             <div id="navbar">
                 <ul id="nav">
                     <div>
-                        <a href="#"><li>Interests</li></a>
+                        <a href="#"><li>About Me</li></a>
                     </div>
                     <div>
-                        <a href="#"><li>Work</li></a>
+                        <a href="#"><li>Experience</li></a>
                     </div>
                     <div>
-                        <a href="#"><li>Volunteering</li></a>
+                        <a href="#"><li>Skills</li></a>
                     </div>
                     <div>
-                        <a href="#"><li>Hobbies</li></a>
+                        <a href="#"><li>Contact</li></a>
                     </div>
                 </ul>
             </div>
