--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <div class="sub" id="don" class="left">
                 <img src="http://icons.iconarchive.com/icons/jozef89/services-flat/512/responsive-web-icon.png"></img>
                 <p>
-                <span>WORK EXPERIENCE</span><br><br>Two-week work placement with a partner in the property department of a general practice solicitors' firm. I carried out research in relation to a boundary dispute, attended Court and observed interviews with clients.
+                <span>WORK EXPERIENCE</span><br><br>Highly communicative individual with strong interpersonal skills and an ability to adapt to working in team environments. Motivated by challenge, an astute and dedicated student working to the highest of ability and effectively managing the challenges of part-time employment while successfully completing VCE. Ongoing volunteer engagement demonstrates a focus on community, while work in customer service field demonstrates reliability, honesty, integrity and ability to collaborate.
                 </p>
             </div>
             <div class="sub" id="leo" class="right">
                 <img src="http://www.logixspace.com/safekids/images/library.png"></img>
                 <p>
-                <span>EDUCATION</span><br><br>I went to the Holgate School in July 2008 through till July 2013. I have also just passed my first year at college. The course was a BTECT Diploma in IT (Software Development) at level 2. This course contained a range of skills which I was new to but now have learnt, these new skills are programming, graphics design and wed design. This was achieved at Vision West Notts College.
+                <span>EDUCATION</span><br><br>Highly communicative individual with strong interpersonal skills and an ability to adapt to working in team environments. Motivated by challenge, an astute and dedicated student working to the highest of ability and effectively managing the challenges of part-time employment while successfully completing VCE. Ongoing volunteer engagement demonstrates a focus on community, while work in customer service field demonstrates reliability, honesty, integrity and ability to collaborate.
                 </p>
             </div>
             <div class="sub" id="mike" class="left">
